salesforce/force-app/main/default/objects/Beneficiary__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customer</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
</CustomField>