salesforce/force-app/main/default/objects/Beneficiary__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <type>Text</type>
    <length>150</length>
</CustomField>