salesforce/force-app/main/default/objects/Beneficiary__c/fields/SWIFT_BIC__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_BIC__c</fullName>
    <label>SWIFT BIC</label>
    <type>Text</type>
    <length>50</length>
</CustomField>