salesforce/force-app/main/default/objects/Beneficiary__c/listViews/Active_Beneficiaries.listView-meta.xml
<ListView>
    <fullName>Active_Beneficiaries</fullName>
    <filterScope>Everything</filterScope>
    <label>Active Beneficiaries</label>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>APPROVED</value>
    </filters>

</ListView>