salesforce/force-app/main/default/objects/Beneficiary__c/listViews/All_Beneficiaries.listView-meta.xml
<ListView>
    <fullName>All_Beneficiaries</fullName>
    <filterScope>Everything</filterScope>
    <label>All Beneficiaries</label>

</ListView>